# ServerInspector

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .replit  .secrets.baseline  Dockerfile.build  INSTALL.md  LICENSE  Makefile  README.md  build_executable.py  cleanup.sh  format-code.sh  install-dev.sh  install.bat  install.sh  main.py  organize-examples.sh  pyproject.toml  pytest.ini  requirements.txt  serverinspect-test.yaml  serverinspect.spec  test-install.sh  test_enhancements.py
.github/: .gitlab-ci.yml  dependabot.yml
.github/workflows/: README.md  REUSABLE.md  build.yml  docker-security.yml  format.yml  lint.yml  release.yml  reusable-build.yml  reusable-security.yml  reusable-test.yml  sbom.yml  security-scan.yml  supply-chain.yml  test.yml
attached_assets/: Pasted--kelleyblackmore-workspaces-ServerInspector-add-github-actions-e51-ls-README-md-e-1744355289104.txt
config/: docker-example.yaml  example.yaml  test.yaml
docker/: Dockerfile  Dockerfile.build  README-docker.md  README.md  docker-compose.yml
docs/: INSTALL.md  README.md  SECURITY.md
examples/: README.md  ssh_test.yaml  system_info.yaml
examples/configs/: basic_test.yaml  comprehensive_test.yaml  ssh_test.yaml  system_info.yaml  ubuntu-baseline.yaml  variable_test.yaml  vault-test.yaml  vault-user-access.yaml
examples/results/: results.json  results.yaml
scripts/: README.md  docker-build.sh  docker-run.sh  setup_security.sh
scripts/install/: install-dev.sh  install.bat  install.sh  test-install.sh
serverinspect/: __init__.py  cli.py  config.py
serverinspect/formatters/: __init__.py  base.py  terminal_formatter.py  yaml_formatter.py
serverinspect/templates/: report.html.j2
serverinspect/test_types/: __init__.py  base.py  command.py  file.py  package.py  process.py
src/: main.py
src/attached_assets/: README.md  __init__.py
src/serverinspect/: cli.py  config.py  core.py  package_managers.py  result_types.py  service_managers.py
src/serverinspect/checkers/: __init__.py  command.py  config.py  file.py  package.py  port.py  process.py  service.py
src/serverinspect/collectors/: __init__.py  system_info.py
src/serverinspect/formatters/: __init__.py  base.py  html_formatter.py  json_formatter.py  terminal_formatter.py  yaml_formatter.py
src/serverinspect/runners/: __init__.py  base.py  local.py  ssh.py
src/serverinspect/templates/: report.html.j2
src/serverinspect/test_types/: __init__.py  base.py  command.py  file.py  package.py  port.py  process.py  service.py
src/serverinspector/: __init__.py  cli.py  config.py  core.py  package_managers.py  result_types.py  service_managers.py
src/serverinspector/checkers/: __init__.py  command.py  config.py  file.py  package.py  port.py  process.py  service.py
src/serverinspector/collectors/: system_info.py
src/serverinspector/formatters/: __init__.py  base.py  html_formatter.py  json_formatter.py  terminal_formatter.py  yaml_formatter.py
src/serverinspector/runners/: __init__.py  base.py  local.py  ssh.py
src/serverinspector/templates/: report.html.j2
tests/: README.md  __init__.py  conftest.py  test_cli.py  test_cli_end_to_end.py
tests/integration/: Dockerfile.alpine  Dockerfile.arch  Dockerfile.centos  Dockerfile.debian  Dockerfile.fedora  Dockerfile.opensuse  Dockerfile.ubuntu  README.md  docker-compose.yml  run_tests.py  test_cli_end_to_end.py
tests/integration/configs/: alpine-tests.yaml  arch-tests.yaml  centos-tests.yaml  common-tests-fixed.yaml  common-tests.yaml  debian-tests.yaml  fedora-tests.yaml  opensuse-tests.yaml  ubuntu-tests.yaml
tests/integration/results/: test_results_20251117_061020.json  test_results_20251117_061020.yaml  test_results_20251117_061813.json  test_results_20251117_061813.yaml
tests/unit/: __init__.py  test_checkers.py  test_config.py  test_core.py  test_formatters.py  test_result_types.py  test_runners.py
