[project]
name = "serverinspect"
version = "0.1.0"
description = "A Python-based server inspection and testing tool"
readme = "README.md"
authors = [
    {name = "ServerInspect Team"}
]
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.0",
    "jinja2>=3.1.0",
    "paramiko>=3.1.0",
    "psutil>=5.9.0",
    "pyyaml>=6.0.0",
    "rich>=12.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "pylint>=2.17.0",
    "pyinstaller>=6.0.0",
    "ruff>=0.1.3",
    "pytest>=7.0.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
serverinspect = "serverinspect.cli:cli"
si = "serverinspect.cli:cli"

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = [
    "serverinspect",
    "serverinspect.checkers",
    "serverinspect.templates",
    "serverinspect.runners",
    "serverinspect.formatters",
    "serverinspect.collectors"
]

[tool.ruff]
# Set a specific line length
line-length = 100
# Ignore E501 (line too long) for specific file patterns
per-file-ignores = { "src/serverinspect/runners/*.py" = ["E501"], "tests/**/*.py" = ["E501"] }

[tool.bandit]
# Ignore specific warnings that have been properly mitigated
# B404: Import of subprocess module - We use subprocess with proper safeguards
# B603: subprocess call with shell=False - This is actually safer than shell=True
# B601: Paramiko exec_command possible shell injection - We sanitize inputs with shlex.quote()
# B507: Paramiko set_missing_host_key_policy with AutoAddPolicy - Expected for a server inspection tool
skips = ["B404", "B603", "B601", "B507"]
